--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.1",
+    "reactjs-popup": "^1.5.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.0.0",
     "typescript": "~3.7.2"
