--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "@types/styled-theming": "^2.2.2",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "react": "^16.12.0",
@@ -22,6 +23,7 @@
     "reactjs-popup": "^1.5.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.0.0",
+    "styled-theming": "^2.2.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
