--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "reactjs-popup": "^1.5.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.0.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "uniqid": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,6 +50,7 @@
     "@types/axios": "^0.14.0",
     "@types/reach__router": "^1.2.6",
     "@types/styled-components": "^4.4.2",
+    "@types/uniqid": "^4.1.3",
     "@types/webpack-env": "^1.15.1",
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
