--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "dotenv": "^8.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-input-range": "^1.3.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.1",
     "reactjs-popup": "^1.5.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.0.0",
+    "styled-theming": "^2.2.0",
     "typescript": "~3.7.2",
-    "uniqid": "^5.2.0",
-    "styled-theming": "^2.2.0"
+    "uniqid": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
