--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^16.12.0",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.9.0",
     "react-input-range": "^1.3.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.1",
