--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-REACT_APP_API_ENDPOINT=https://splitmaster.herokuapp.com
+REACT_APP_API_ENDPOINT=http://splitmaster-flask.herokuapp.com
+# http://splitmaster-flask.herokuapp.com
 # REACT_APP_API_ENDPOINT=http://localhost:3000
