--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 REACT_APP_API_ENDPOINT=http://splitmaster-flask.herokuapp.com
-# http://splitmaster-flask.herokuapp.com
-# REACT_APP_API_ENDPOINT=http://localhost:3000
+# REACT_APP_API_ENDPOINT=http://127.0.0.1:8000
