--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "dotenv": "^8.2.0",
+    "formik": "^2.1.4",
     "qrcode.react": "^1.0.0",
     "react": "^16.12.0",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
+    "react-indiana-drag-scroll": "^1.6.1",
     "react-input-range": "^1.3.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.1",
