--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^3.9.0",
     "react-indiana-drag-scroll": "^1.6.1",
     "react-input-range": "^1.3.0",
+    "react-json-view": "^1.19.1",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.1",
     "reactjs-popup": "^1.5.0",
