--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/styled-components": "^4.4.2",
     "@types/uniqid": "^4.1.3",
     "@types/webpack-env": "^1.15.1",
+    "ts-jest": "^25.4.0",
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^4.2.0"
