--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "qrcode.react": "^1.0.0",
     "react": "^16.12.0",
     "react-chartjs-2": "^2.9.0",
+    "react-data-components": "^1.2.0",
     "react-dom": "^16.12.0",
     "react-i18next": "^11.4.0",
     "react-icons": "^3.9.0",
