--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
+    "@types/reach__router": "^1.3.5",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
@@ -31,7 +32,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "tsc"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -50,7 +52,6 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/reach__router": "^1.2.6",
     "@types/styled-components": "^4.4.2",
     "@types/webpack-env": "^1.15.1",
     "ts-jest": "^25.4.0",
